--- a/src/components/vm-select/index.less
+++ b/src/components/vm-select/index.less
@@ -31,6 +31,7 @@
   height: 100%;
   transition: all 0.2s linear;
   text-align: left;
+  background: #fff;
   &:hover {
     border: 1px solid @theme-color;
   }
@@ -88,6 +89,7 @@
   width: 100%;
   height: 28px;
   padding: 5px;
+  box-sizing: border-box;
   &:focus {
     outline: none;
   }
